resources/metrics.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-metrics-server 
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - metrics.k8s.mrgz.org
      secretName: ssl-containers
  rules:
  - host: metrics.k8s.mrgz.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-server 
            port:
              number: 443
